# svd2hal

./: Cargo.toml
src/: main.rs
src/input/: hal_definition.rs  input.rs  mod.rs
src/output/: macros.rs  mod.rs  output.rs  templates.rs
